2009-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c (nds_write): Adjust prototype.

2009-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* dswifi/arm7/source/wifi_arm7.c, dswifi/arm7/source/wifi_arm7.h,
	dswifi/arm9/source/wifi_arm9.c, libnds/include/nds/arm7/audio.h,
	libnds/include/nds/arm7/clock.h, libnds/include/nds/arm7/serial.h,
	libnds/include/nds/arm7/touch.h, libnds/source/arm7/clock.c,
	libnds/source/arm7/touch.c, rtc/rtc.c: Eliminate various warnings.

2009-11-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnds/include/nds/arm9/exceptions.h,
	libnds/include/nds/arm9/image.h,
	libnds/include/nds/arm9/input.h,
	libnds/include/nds/arm9/math.h,
	libnds/include/nds/arm9/pcx.h,
	libnds/include/nds/arm9/rumble.h,
	libnds/include/nds/arm9/sound.h,
	libnds/include/nds/arm9/trig_lut.h,
	libnds/source/arm9/dcache.S,
	libnds/source/arm9/exceptionHandler.S,
	libnds/source/arm9/exceptions.c,
	libnds/source/arm9/image.c,
	libnds/source/arm9/keys.c,
	libnds/source/arm9/pcx.c,
	libnds/source/arm9/rumble.c,
	libnds/source/arm9/sound.c,
	libnds/source/arm9/system.c,
	libnds/source/arm9/touch.c,
	libnds/source/common/biosCalls.S,
	libnds/source/common/gbfs.c,
	libnds/source/common/interruptDispatcher.S,
	libnds/source/common/interrupts.c:
	Remove CVS-$Log's.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/nds.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/nds.cfg: New (relocated from /make/custom).

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

 2009-08-21	Roxana Leontie <roxana.leontie@gmail.com>

	* nds/fb/fb.c: took off get_screen_info() and set_screen_info() extern
	references

2009-08-10	Roxana Leontie <roxana.leontie@gmail.com>

	* fb/fb.c: function calls renamed; defined references to the extern